--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\Sahy\\AppData\\Roaming\\NetBeans\\19\\tomcat90.properties
-file.reference.postgresql-42.3.1.jar=D:\\ITU\\dev pack S5 S3\\postgresql-42.3.1.jar
-j2ee.server.home=D:/ITU/Repertoire_logiciel/Tomcat10
-j2ee.server.instance=tomcat90:home=D:\\ITU\\Repertoire_logiciel\\Tomcat10
+deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.postgresql-42.3.1.jar=D:\\itu\\Mme Baovola\\dev pack S5 S3\\postgresql-42.3.1.jar
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Sahy\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
