--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ file.reference.postgresql-42.3.1.jar=D:\\ITU\\dev pack S5 S3\\postgresql-42.3.1.
 j2ee.server.home=D:/ITU/Repertoire_logiciel/Tomcat10
 j2ee.server.instance=tomcat90:home=D:\\ITU\\Repertoire_logiciel\\Tomcat10
 selected.browser=Chrome
-user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Sahy\\AppData\\Roaming\\NetBeans\\19\\build.properties
